# jejakcuan

./: .editorconfig  .env.example  .gitignore  CLAUDE.md  Cargo.toml  EXECUTE_ALL.md  MASTER_PROMPT.md  main-goals.md  run.sh
.agent/: commands.sh
.agent/sessions/: activity.jsonl
.claude/: settings.json
.claude/commands/: failure.md  success.md
.claude/hooks/: post-tool-use.py  pre-compact.py  session-start.py  stop.py
.moon/: toolchain.yml  workspace.yml
.moon/tasks/: node.yml  python.yml  rust.yml
apps/api/: Cargo.toml  moon.yml
apps/api/src/: auth.rs  config.rs  lib.rs  main.rs
apps/api/src/notifications/: email.rs  mod.rs  telegram.rs  webhook.rs
apps/api/src/routes/: admin.rs  analysis.rs  auth.rs  financials.rs  jobs.rs  mod.rs  stocks.rs  streaming.rs  watchlist.rs
apps/api/tests/: api_integration_test.rs
apps/ml/: moon.yml  pyproject.toml
apps/ml/src/jejakcuan_ml/: __init__.py  config.py  main.py
apps/ml/src/jejakcuan_ml/aggregation/: __init__.py  aggregator.py
apps/ml/src/jejakcuan_ml/detection/: __init__.py  pump_detector.py
apps/ml/src/jejakcuan_ml/features/: __init__.py  sequence.py  technical.py
apps/ml/src/jejakcuan_ml/models/: __init__.py  anomaly.py  lstm.py  sentiment.py
apps/ml/src/jejakcuan_ml/patterns/: __init__.py  dtw.py
apps/ml/src/jejakcuan_ml/routers/: __init__.py  predict.py  sentiment.py
apps/ml/src/jejakcuan_ml/schemas/: __init__.py  prediction.py  text_sources.py
apps/ml/src/jejakcuan_ml/scrapers/: __init__.py  base.py  broker_flow.py  cli.py  corporate_actions.py  database.py  eipo.py  financials.py  idx.py  news_scraper.py  price_history.py
apps/ml/src/jejakcuan_ml/stockbit/: __init__.py  client.py  models.py
apps/ml/src/jejakcuan_ml/telegram/: __init__.py  monitor.py  parser.py
apps/ml/src/jejakcuan_ml/training/: __init__.py  lstm_trainer.py
apps/ml/tests/: test_anomaly.py  test_detection.py  test_features.py  test_main.py  test_patterns.py  test_sentiment_api.py  test_telegram.py
apps/web/: .env.example  eslint.config.js  moon.yml  package.json  pnpm-lock.yaml  tailwind.config.ts  vite.config.ts  vitest-setup.ts  vitest.config.ts
apps/web/src/: app.css  app.html  vitest.d.ts
apps/web/src/lib/: api.test.ts  api.ts
apps/web/src/lib/components/: AnalysisSummary.svelte  BusinessAnalysis.svelte  CandlestickChart.svelte  FinancialStatements.svelte  FundamentalMetrics.svelte  IndexSummary.svelte  InstitutionalFlowAnalysis.svelte  PriceChart.svelte  ScoreBreakdown.svelte  ScoreGauge.svelte  ScoreGauge.test.ts  SectorHeatmap.svelte  SignalCard.svelte  SignalCard.test.ts  SignalFilters.svelte  StickyStockHeader.svelte  StockAnalysis.svelte  StockAnalysis.types.ts  TechnicalChart.svelte  TopMovers.svelte  WatchlistCard.svelte  index.ts
apps/web/src/lib/components/BrokerFlow/: BrokerFlowChart.svelte  ForeignFlow.svelte  index.ts
apps/web/src/lib/stores/: auth.test.ts  auth.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/admin/data-status/: +page.svelte
apps/web/src/routes/alerts/: +page.svelte
apps/web/src/routes/conglomerates/: +page.svelte
apps/web/src/routes/dashboard/: +page.svelte
apps/web/src/routes/login/: +page.svelte
apps/web/src/routes/market/: +page.svelte
apps/web/src/routes/signals/: +page.svelte
apps/web/src/routes/stock/[symbol]/: +page.svelte
apps/web/src/routes/watchlist/: +page.svelte
crates/audit/: Cargo.toml
crates/audit/src/: events.rs  lib.rs  logger.rs  retention.rs
crates/cache/: Cargo.toml
crates/cache/src/: client.rs  keys.rs  lib.rs  stock_cache.rs
crates/core/: Cargo.toml
crates/core/src/: fundamental_score.rs  lib.rs  models.rs  scoring.rs  technical_score.rs
crates/core/src/alerts/: broker_alerts.rs  mod.rs  technical_alerts.rs
crates/core/tests/: integration_test.rs
crates/data-sources/: Cargo.toml
crates/data-sources/src/: error.rs  lib.rs
crates/data-sources/src/broker/: analysis.rs  classification.rs  mod.rs  models.rs  scraper.rs
crates/data-sources/src/sectors/: client.rs  mod.rs  models.rs
crates/data-sources/src/shareholding/: analysis.rs  mod.rs  models.rs  scraper.rs
crates/data-sources/src/twelvedata/: client.rs  mod.rs  models.rs  websocket.rs
crates/data-sources/src/yahoo/: client.rs  mod.rs  models.rs  parser.rs
crates/data-sources/tests/: yahoo_test.rs
crates/db/: Cargo.toml
crates/db/migrations/: 001_initial_schema.sql  002_seed_stocks.sql  003_add_business_tables.sql  004_add_financial_statements.sql
crates/db/src/: lib.rs  models.rs  pool.rs  repositories.rs
crates/db/src/repositories/: broker_summary.rs  prices.rs  scores.rs  stocks.rs  watchlist.rs
crates/fundamental/: Cargo.toml
crates/fundamental/src/: dcf.rs  error.rs  lib.rs  metrics.rs  peers.rs
crates/technical/: Cargo.toml
crates/technical/src/: bollinger.rs  ema.rs  error.rs  fibonacci.rs  lib.rs  macd.rs  orderflow.rs  rsi.rs  volume.rs  wyckoff.rs
docs/compliance/: data-handling-procedures.md  pdp-law-compliance.md
docs/plans/: 2026-01-10-jejakcuan-design.md  2026-01-16-main-goals-roadmap.md  2026-01-19-stock-page-redesign.md
infra/docker/: docker-compose.yml
infra/k8s/: README.md  api-deployment.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  ml-deployment.yaml  namespace.yaml  network-policy.yaml  postgres.yaml  redis.yaml  secrets.yaml  web-deployment.yaml
scripts/: hash_password.py
