[workspace]
resolver = "2"
members = [
    "apps/api",
    "crates/audit",
    "crates/core",
    "crates/cache",
    "crates/data-sources",
    "crates/technical",
    "crates/fundamental",
    "crates/db",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["JejakCuan Team"]
license = "MIT"

[workspace.dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "chrono", "uuid", "rust_decimal"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
rust_decimal = { version = "1", features = ["serde"] }
thiserror = "1"
anyhow = "1"

# Auth
argon2 = "0.5"
jsonwebtoken = "9"

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Config
dotenvy = "0.15"

# Async traits
async-trait = "0.1"
