[package]
name = "jejakcuan-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
chrono.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true

# Database
sqlx.workspace = true

# Internal crates
jejakcuan-core = { path = "../../crates/core" }
jejakcuan-db = { path = "../../crates/db" }
jejakcuan-data-sources = { path = "../../crates/data-sources" }

# Additional
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
