[package]
name = "jejakcuan-api"
version.workspace = true
edition.workspace = true

[dependencies]
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenvy.workspace = true
chrono.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true

# Database
sqlx.workspace = true

# Internal crates
jejakcuan-core = { path = "../../crates/core" }
jejakcuan-db = { path = "../../crates/db" }
jejakcuan-data-sources = { path = "../../crates/data-sources" }
jejakcuan-technical = { path = "../../crates/technical" }
jejakcuan-fundamental = { path = "../../crates/fundamental" }

# Additional
axum-extra = { version = "0.9", features = ["cookie"] }
time = "0.3"
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
thiserror.workspace = true
rust_decimal = { workspace = true, features = ["serde"] }
rust_decimal_macros = "1"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
axum-test = "14"
tower = { version = "0.4", features = ["util"] }
