[project]
name = "jejakcuan-ml"
version = "0.1.0"
description = "ML service for JejakCuan stock prediction and sentiment analysis"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
scrapers = [
    "psycopg2-binary>=2.9.9",
    "beautifulsoup4>=4.12.0",
    "loguru>=0.7.2",
    "lxml>=5.1.0",
]
ml = [
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
    "types-psycopg2>=2.9.21",
    "types-beautifulsoup4>=4.12.0",
]

[project.scripts]
jejakcuan-scrape = "jejakcuan_ml.scrapers.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
