[package]
name = "jejakcuan-data-sources"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

jejakcuan-core = { path = "../core" }
