[package]
name = "jejakcuan-data-sources"
version.workspace = true
edition.workspace = true

[dependencies]
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

# HTML parsing for scraping
scraper = "0.18"
rust_decimal_macros = "1"

# WebSocket support
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
url = "2"

jejakcuan-core = { path = "../core" }
