[package]
name = "jejakcuan-db"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
thiserror.workspace = true
tracing.workspace = true
dotenvy.workspace = true

jejakcuan-core = { path = "../core" }
